--- a/www/chargement.html
+++ b/www/chargement.html
@@ -1,55 +1,62 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta description="Tu as fait ton choix, nous faisons le tri!">
-    <link rel="stylesheet" type="text/css" href="dist/index.css">
-    <title>Chargement en cours</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta description="Tu as fait ton choix, nous faisons le tri!">
+  <link rel="stylesheet" type="text/css" href="./dist/index.css">
+  <title>Chargement en cours</title>
 </head>
 
 
 <body>
-  
-    <nav>
-        <div class="nav-wrapper">
-          <a href="#!" class="brand-logo">Logo</a>
-          <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-          <ul class="right hide-on-med-and-down">
-            <li><a href="accueil.html">Accueil</a></li>
-            <li><a href="mabibliotheque.html">Ma bibliothèque</a></li>
-            <li><a href="random.html">Jeu au hasard</a></li>
-            
-          </ul>
-        </div>
-      </nav>
-    
-      <ul class="sidenav" id="mobile-demo">
-            <li><a href="accueil.html">Accueil</a></li>
-            <li><a href="mabibliotheque.html">Ma bibliothèque</a></li>
-            <li><a href="random.html">Jeu au hasard</a></li>
+  <nav>
+    <div class="nav-wrapper">
+      <a href="#!" class="brand-logo">Sélectionner son jeu vidéo</a>
+      <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="accueil.html">Accueil</a></li>
+        <li><a href="menudeselection.html">Mon espace</a></li>
+        <li><a href="mabibliotheque.html">Ma bibliothèque</a></li>
+        <li><a href="preferences.html">Sélectionner votre jeu</a></li>
+        <li><a href="random.html">Jeu au hasard</a></li>
+
       </ul>
+    </div>
+  </nav>
 
-      <div class="preloader-wrapper big active">
-        <div class="spinner-layer spinner-blue-only">
-          <div class="circle-clipper left">
-            <div class="circle"></div>
-          </div><div class="gap-patch">
-            <div class="circle"></div>
-          </div><div class="circle-clipper right">
-            <div class="circle"></div>
-          </div>
-        </div>
+  <ul class="sidenav" id="mobile-demo">
+    <li><a href="accueil.html">Accueil</a></li>
+    <li><a href="menudeselection.html">Mon espace</a></li>
+    <li><a href="mabibliotheque.html">Ma bibliothèque</a></li>
+    <li><a href="preferences.html">Sélectionner votre jeu</a></li>
+    <li><a href="random.html">Jeu au hasard</a></li>
+  </ul>
+
+  <div class="preloader-wrapper big active">
+    <div class="spinner-layer spinner-blue-only">
+      <div class="circle-clipper left">
+        <div class="circle"></div>
       </div>
+      <div class="gap-patch">
+        <div class="circle"></div>
+      </div>
+      <div class="circle-clipper right">
+        <div class="circle"></div>
+      </div>
+    </div>
+  </div>
 
-    <p>Tu as fait ton choix, nous faisons le tri parmi toutes nos bibliothèques! Patiente un instant...<br>
-        <br>
-        Tu n'est pas satisfait par la proposition que l'on te fait ? <br>
-        Tu n'as coché aucune case? <br>
-        Ou tu les as toutes cochées?! <br>
-        N'hésites pas à relancer une recherche, ou génères un jeu au hasard! <br>
-        Rendez-vous à l'accueil!<br>
-    </p>
+  <p>Tu as fait ton choix, nous faisons le tri parmi toutes nos bibliothèques! Patiente un instant...<br>
+    <br>
+    Tu n'est pas satisfait par la proposition que l'on te fait ? <br>
+    Tu n'as coché aucune case? <br>
+    Ou tu les as toutes cochées?! <br>
+    N'hésites pas à relancer une recherche, ou génères un jeu au hasard! <br>
+    Rendez-vous à l'accueil!<br>
+  </p>
 </body>
+
 </html>
