--- a/www/index.html
+++ b/www/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Accueil</title>
-  <link rel="stylesheet" type="text/css" href="dist/index.css">
+  <link rel="stylesheet" type="text/css" href="./dist/index.css">
 
 </head>
 
 <body>
-  Bienvenue :)
 
     <nav>
       <div class="nav-wrapper">
