--- a/www/jeupropose.html
+++ b/www/jeupropose.html
@@ -14,24 +14,26 @@
 <body>
     <nav>
         <div class="nav-wrapper">
-            <a href="#!" class="brand-logo">Logo</a>
+            <a href="#!" class="brand-logo">Sélectionner son jeu vidéo</a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="accueil.html">Accueil</a></li>
-                <li><a href="jeupropose.html">Jeu proposé</a></li>
-                <li><a href="preferences.html">Préférences</a></li>
-                <li><a href="mobile.html">Mobile</a></li>
+                <li><a href="menudeselection.html">Mon espace</a></li>
+                <li><a href="mabibliotheque.html">Ma bibliothèque</a></li>
+                <li><a href="preferences.html">Sélectionner votre jeu</a></li>
+                <li><a href="random.html">Jeu au hasard</a></li>
+
             </ul>
         </div>
     </nav>
 
     <ul class="sidenav" id="mobile-demo">
         <li><a href="accueil.html">Accueil</a></li>
-        <li><a href="jeupropose.html">Jeu proposé</a></li>
-        <li><a href="preferences.html">Préférences</a></li>
-        <li><a href="mobile.html">Mobile</a></li>
+        <li><a href="menudeselection.html">Mon espace</a></li>
+        <li><a href="mabibliotheque.html">Ma bibliothèque</a></li>
+        <li><a href="preferences.html">Sélectionner votre jeu</a></li>
+        <li><a href="random.html">Jeu au hasard</a></li>
     </ul>
-
     <h1>Jeu proposé</h1>
 
     <h1>Mario Kart 8 Deluxe</h1>
