--- a/www/preferences.html
+++ b/www/preferences.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -7,35 +7,35 @@
     <meta name="préférences" content="width=device-width, initial-scale=1.0">
     <meta description="Questionnaire pour déterminer le jeu correspondant à mes envies">
     <title>Mes Préférences de jeux</title>
-    <link rel="stylesheet" type="text/css" href="dist/index.css">
+    <link rel="stylesheet" type="text/css" href="./dist/index.css">
 </head>
 
 <body>
 
+    <nav>
+        <div class="nav-wrapper">
+            <a href="#!" class="brand-logo">Sélectionner son jeu vidéo</a>
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+            <ul class="right hide-on-med-and-down">
+                <li><a href="accueil.html">Accueil</a></li>
+                <li><a href="menudeselection.html">Mon espace</a></li>
+                <li><a href="mabibliotheque.html">Ma bibliothèque</a></li>
+                <li><a href="preferences.html">Sélectionner votre jeu</a></li>
+                <li><a href="random.html">Jeu au hasard</a></li>
 
-    <header>
+            </ul>
+        </div>
+    </nav>
 
-        <nav>
-            <div class="nav-wrapper">
-                <a href="#!" class="brand-logo">Logo</a>
-                <a href="#" data-target="mobile-demo" class="sidenav-trigger">
-                    <i class="material-icons">menu</i></a>
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="accueil.html">Accueil</a></li>
-                    <li><a href="mabibliotheque.html">Ma bibliothèque</a></li>
-                    <li><a href="random.html">Jeu au hasard</a></li>
+    <ul class="sidenav" id="mobile-demo">
+        <li><a href="accueil.html">Accueil</a></li>
+        <li><a href="menudeselection.html">Mon espace</a></li>
+        <li><a href="mabibliotheque.html">Ma bibliothèque</a></li>
+        <li><a href="preferences.html">Sélectionner votre jeu</a></li>
+        <li><a href="random.html">Jeu au hasard</a></li>
+    </ul>
 
-                </ul>
-            </div>
-        </nav>
 
-        <ul class="sidenav" id="mobile-demo">
-            <li><a href="accueil.html">Accueil</a></li>
-            <li><a href="mabibliotheque.html">Ma bibliothèque</a></li>
-            <li><a href="random.html">Jeu au hasard</a></li>
-        </ul>
-
-    </header>
 
 
     <section class="categories">
@@ -216,4 +216,5 @@
     <script type="text/javascript" src="dist/index.js"></script>
 
 </body>
+
 </html>
