--- a/www/accueil.html
+++ b/www/accueil.html
@@ -6,13 +6,14 @@
     <meta name="accueil" content="width=device-width, initial-scale=1.0">
     <title>Accueil</title>
     <link rel="stylesheet" type="text/css" href="dist/index.css">
+    
 </head>
 
 <body>
-
+<header>
     <nav>
         <div class="nav-wrapper">
-            <a href="#!" class="brand-logo">Sélectionner son jeu vidéo</a>
+            <a href="#!" class="brand-logo">Accueil</a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
                 <li><a href="accueil.html">Accueil</a></li>
@@ -32,6 +33,7 @@
         <li><a href="preferences.html">Sélectionner votre jeu</a></li>
         <li><a href="random.html">Jeu au hasard</a></li>
     </ul>
+</header>
 
     <h1>S'inscrire</h1>
 
