--- a/www/index.html
+++ b/www/index.html
@@ -12,26 +12,7 @@
 
 <body>
 
-    <nav>
-      <div class="nav-wrapper">
-        <a href="#!" class="brand-logo">Logo</a>
-        <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-        <ul class="right hide-on-med-and-down">
-          <li><a href="accueil.html">Accueil</a></li>
-          <li><a href="mabibliotheque.html">Ma bibliothèque</a></li>
-          <li><a href="random.html">Jeu au hasard</a></li>
-
-        </ul>
-      </div>
-    </nav>
-
-    <ul class="sidenav" id="mobile-demo">
-      <li><a href="accueil.html">Accueil</a></li>
-      <li><a href="mabibliotheque.html">Ma bibliothèque</a></li>
-      <li><a href="random.html">Jeu au hasard</a></li>
-    </ul>
-
-
+<header></header>
 
   <script type="text/javascript" src="dist/index.js"></script>
 
