--- a/www/index.html
+++ b/www/index.html
@@ -12,8 +12,16 @@
 
 <body>
 
-<header></header>
 
+<header>
+  
+</header>
+
+<main>
+  
+</main>
+
+<footer></footer>
   <script type="text/javascript" src="dist/index.js"></script>
 
 </body>
