--- a/src/preferences/preferences.html
+++ b/src/preferences/preferences.html
@@ -5,67 +5,67 @@
     <form method="GET" action="#">
         <p>
             <label>
-                <input type="checkbox" class="filled-in independant" id="catégorie" />
+                <input type="checkbox" class="filled-in independant categories" />
                 <span>Indépendant</span>
             </label>
         </p>
         <p>
             <label>
-                <input type="checkbox" class="filled-in strategie" id="catégorie" />
+                <input type="checkbox" class="filled-in strategie categories" />
                 <span>Stratégie</span>
             </label>
         </p>
         <p>
             <label>
-                <input type="checkbox" class="filled-in gestion" id="catégorie" />
+                <input type="checkbox" class="filled-in gestion categories" />
                 <span>Gestion</span>
             </label>
         </p>
         <p>
             <label>
-                <input type="checkbox" class="filled-in action" id="catégorie" />
+                <input type="checkbox" class="filled-in action categories" />
                 <span>Action</span>
             </label>
         </p>
         <p>
             <label>
-                <input type="checkbox" class="filled-in rpg" id="catégorie" />
+                <input type="checkbox" class="filled-in rpg categories" />
                 <span>RPG</span>
             </label>
         </p>
         <p>
             <label>
-                <input type="checkbox" class="filled-in fps" id="catégorie" />
+                <input type="checkbox" class="filled-in fps categories" />
                 <span>FPS</span>
             </label>
         </p>
         <p>
             <label>
-                <input type="checkbox" class="filled-in aventure" id="catégorie" />
+                <input type="checkbox" class="filled-in aventure categories" />
                 <span>Aventure</span>
             </label>
         </p>
         <p>
             <label>
-                <input type="checkbox" class="filled-in simulation" id="catégorie" />
+                <input type="checkbox" class="filled-in simulation categories" />
                 <span>Simulation</span>
             </label>
         </p>
         <p>
             <label>
-                <input type="checkbox" class="filled-in course" id="catégorie" />
+                <input type="checkbox" class="filled-in course categories" />
                 <span>Course</span>
             </label>
         </p>
         <p>
             <label>
-                <input type="checkbox" class="filled-in sport" id="catégorie" />
+                <input type="checkbox" class="filled-in sport categories" />
                 <span>Sport</span>
             </label>
         </p>
         <p>
             <label>
-                <input type="checkbox" class="filled-in multijoueurs" id="catégorie" />
+                <input type="checkbox" class="filled-in multijoueurs categories" />
                 <span>Multijoueurs</span>
             </label>
         </p>
@@ -100,61 +100,61 @@
     <form method="GET" action="#">
         <p>
             <label>
-                <input type="checkbox" class="filled-in joyeux" id="humeur" />
+                <input type="checkbox" class="filled-in joyeux humeur" />
                 <span>Joyeux</span>
             </label>
         </p>
         <p>
             <label>
-                <input type="checkbox" class="filled-in triste" id="humeur" />
+                <input type="checkbox" class="filled-in triste humeur" />
                 <span>Triste</span>
             </label>
         </p>
         <p>
             <label>
-                <input type="checkbox" class="filled-in poetique" id="humeur" />
+                <input type="checkbox" class="filled-in poetique humeur" />
                 <span>Poétique</span>
             </label>
         </p>
         <p>
             <label>
-                <input type="checkbox" class="filled-in melancolique" id="humeur" />
+                <input type="checkbox" class="filled-in melancolique humeur" />
                 <span>Mélancolique</span>
             </label>
         </p>
         <p>
             <label>
-                <input type="checkbox" class="filled-in defoulant" id="humeur" />
+                <input type="checkbox" class="filled-in defoulant humeur" />
                 <span>Défoulant</span>
             </label>
         </p>
         <p>
             <label>
-                <input type="checkbox" class="filled-in comique" id="humeur" />
+                <input type="checkbox" class="filled-in comique humeur" />
                 <span>Comique</span>
             </label>
         </p>
         <p>
             <label>
-                <input type="checkbox" class="filled-in cerebral" id="humeur" />
+                <input type="checkbox" class="filled-in cerebral humeur" />
                 <span>Cérébral</span>
             </label>
         </p>
         <p>
             <label>
-                <input type="checkbox" class="filled-in dynamique" id="humeur" />
+                <input type="checkbox" class="filled-in dynamique humeur" />
                 <span>Dynamique</span>
             </label>
         </p>
         <p>
             <label>
-                <input type="checkbox" class="filled-in sportif" id="humeur" />
+                <input type="checkbox" class="filled-in sportif humeur" />
                 <span>Sportif</span>
             </label>
         </p>
         <p>
             <label>
-                <input type="checkbox" class="filled-in effrayant" id="humeur" />
+                <input type="checkbox" class="filled-in effrayant humeur" />
                 <span>Effrayant</span>
             </label>
         </p>
