--- a/src/shared/navbar.html
+++ b/src/shared/navbar.html
@@ -1,22 +1,22 @@
 <nav>
     <div class="nav-wrapper">
-        <a href="#!" class="brand-logo">Accueil</a>
+        <a href="#!" class="brand-logo">J A M</a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-            <li><a href="">Accueil</a></li>
-            <li><a class="monespace" href="">Mon espace</a></li>
-            <li><a href="">Ma bibliothèque</a></li>
-            <li><a href="">Sélectionner votre jeu</a></li>
-            <li><a href="">Jeu au hasard</a></li>
+            <li><a class="accueil">Accueil</a></li>
+            <li><a class="preferences">Mes préférences</a></li>
+            <li><a class="bibliotheque">Ma bibliothèque</a></li>
+            <li><a class="menudeselection">Menu de sélection</a></li>
+            <li><a class="random">Jeu au hasard</a></li>
     
         </ul>
     </div>
     </nav>
     
     <ul class="sidenav" id="mobile-demo">
-    <li><a href="">Accueil</a></li>
-    <li><a class="monespace2" href="">Mon espace</a></li>
-    <li><a href="">Ma bibliothèque</a></li>
-    <li><a href="">Sélectionner votre jeu</a></li>
-    <li><a href="">Jeu au hasard</a></li>
+    <li><a class="accueil">Accueil</a></li>
+    <li><a class="preferences">Mes préférences</a></li>
+    <li><a class="bibliotheque">Ma bibliothèque</a></li>
+    <li><a class="menudeselection">Menu de sélection</a></li>
+    <li><a class="random">Jeu au hasard</a></li>
     </ul>`
